i change something in file

--- a/firstrepo.html
+++ b/firstrepo.html
@@ -1,1 +1,386 @@
               MY FIRST REPOSETORY
+
+BRO below is html tags that i learn there is no need to check but depend on you !
+
+
+
+
+<!doctype html>
+<html>
+<head>
+<title>first page of my website</title>
+
+</head>
+<body >
+	<h1>faizan and ahtisham</h1>
+	<img src="howandhow.jpg" title="when mouse will come on image then this will be shown" width="300px" height="500%" alt="when net will be slow of a person then image will not be shown and text will be shown">if you use this tag at begining then image will be show at start  and so on.......
+
+	<h1>these all tags are for headings</h1>
+	<h2 align="center">hello word</h2>
+	<h3>hello &nbsp;&nbsp;&nbsp;&nbsp; word</h3>
+	<h4>hello word</h4>
+	<h5>hello word</h5>
+	<h6>hello word</h6>
+
+	<p align="right"> this tag is use for paraghaph you can this tag mmany time to make paragharphs if you want 4 paraghraps then you have need to use 4 p tags </p>
+
+	<p>
+	 you can use tag (p) many time 
+	<b>use for bold</b>
+
+	<i>this tag is use for italic</i>
+
+	<u>for underline text  </u>
+
+	<s>use for crossing the text</s>
+
+	<p>use this tag(&nbsp;)to make space between to words</p>
+
+	12<sup>th</sup>
+
+	<br>for break
+	<br>
+	<br>for more break use many time
+	<br>
+
+	H<sub>2</sub>0
+
+	<br>
+
+	<font color="red" size="5"> this is use for coloring of text and sizing</font>
+
+	<font  size="7"> this is use for sizing of text max size is 7</font>
+
+	<font face="impact"> this is use for the version of text</font>
+
+	<font color="red" size="7" face="impact"> this is use for coloring of text,version of text and sizing</font>
+
+	<ul>
+		this tag is use for unorder list
+		<li>apple</li>
+		<li>orange</li>
+		<li>banana</li>
+		<li>pineapple</li>
+	</ul>
+
+	<ul type="circle">
+		make squre,circle
+		<li>apple</li>
+		<li>orange</li>
+		<li>banana</li>
+		<li>pineapple</li>
+	</ul>
+
+	<ol>
+		
+		this tag is use for order 0r numbering list
+		<li>apple</li>
+		<li>orange</li>
+		<li>banana</li>
+		<li>pineapple</li>
+	</ol>
+
+	<ol type="a">
+		
+		always write only small a or large A or small i or large I 
+		<li>apple</li>
+		<li>orange</li>
+		<li>banana</li>
+		<li>pineapple</li>
+	</ol>
+
+    <ol type="1" start="2">
+		
+		(start) tag is use when u start numbering from anywhere
+		<li>apple</li>
+		<li>orange</li>
+		<li>banana</li>
+		<li>pineapple</li>
+	</ol>
+
+	</p>
+
+
+	<dl>
+		use for  descrition 0f list(mean heading and its paraghaph heading and its paraghrap)
+		<dt> heading one</dt>
+		<dd> this tag is use for paraghaph you can this tag mmany time to make paragharphs if you want 4 paraghraps then you have need to use 4 p tags  </dd>
+
+		<dt> heading two</dt>
+		<dd> this tag is use for paraghaph you can this tag mmany time to make paragharphs if you want 4 paraghraps then you have need to use 4 p tags  </dd>
+
+		<dt> heading three</dt>
+		<dd> this tag is use for paraghaph you can this tag mmany time to make paragharphs if you want 4 paraghraps then you have need to use 4 p tags  </dd>
+
+	</dl>
+
+	<marquee>text for play </marquee>
+
+	<marquee behavior="slide">play like a slide</marquee>
+
+	<marquee behavior="alternate">start from leftside after touching the rightside again move from leftside and so  on....
+	</marquee>
+
+	<marquee behavior="slide" scrollamount="30">for more speed of playing txt</marquee>
+
+	<hr> to draw a line
+	<hr align="left" width="20%" size="40" color="red">
+
+	<marquee behavior="slide" scrollamount="10" direction="leftside" loop="2" scrolldeley="4" bgcolor="read" width="40%" height="40%">use for many amazing features</marquee>
+
+	<pre> use        for spacing between words</pre>
+
+	<pre>
+	 how           woa
+	        and  
+	</pre>
+
+<img src="howandhow.jpg">
+
+<a href="extra.html" target="_blank" >use for  to go to another page(target is use for opening the page in new tab(optional use))</a>
+<br>
+
+<a href="#paraghaph1">go below on the same page</a>
+
+<p> this tag is use for paraghaph you can this tag mmany time to make paragharphs if you want 4 paraghraps then you have need to use 4 p tags </p>
+<h3><a name="paraghaph1">first heading</a></h3>
+<p> this tag is use for paraghaph you can this tag mmany time to make paragharphs if you want 4 paraghraps then you have need to use 4 p tags </p><p> this tag is use for paraghaph you can this tag mmany time to make paragharphs if you want 4 paraghraps then you have need to use 4 p tags </p><p> this tag is use for paraghaph you can this tag mmany time to make paragharphs if you want 4 paraghraps then you have need to use 4 p tags </p>
+
+<a href="mailto:faizanali4586.net">cntact us</a>
+<br>
+
+
+<table border="1" align="center" bgcolor="red" width="80%" cellpadding="10px" cellspacing="30px">
+
+	<caption>for the heading of table</caption>
+
+	<tr bgcolor="yellow"> use for row
+		<td align="center">col1</td>
+		<td valign="top">this tag is use for paraghaph you can this tag mmany time to make paragharphs if you want 4 paraghraps then you have need to use 4 p tags</td>
+	</tr>
+
+	<tr>
+		<td height="300px" colspan="2">use for merge colum</td>
+
+	</tr>
+
+	<tr>
+		<td height="300px" rowspan="2">2 rows ko mila dena</td>
+		<td>col6</td>
+	</tr>
+
+</table>
+
+
+
+<table border="1" align="center" bgcolor="orange" width="80%" cellpadding="10px" cellspacing="10px">
+<caption>th is use for the heading of first row </caption>
+	<tr>
+		<th>name </th>
+		<th>class</th>
+		<th>percentage</th>
+	</tr>
+
+	<tr > 
+		<td >faizan</td>
+		<td >14th</td>
+		<td >87%</td>
+		
+	</tr>
+<tr > 
+		<td >ahtisham</td>
+		<td >14th</td>
+		<td >80%</td>
+		
+	</tr>
+	<tr > 
+		<td >faraz</td>
+		<td >14th</td>
+		<td >90%</td>
+		
+	</tr>
+
+</table>
+
+
+<table border="1" align="center" bgcolor="orange" width="80%" cellpadding="2px" cellspacing="1px">
+<thead> 
+	<tr>
+		<th>subject </th>
+		<th>marks</th>
+		
+	</tr>
+</thead>
+<tbody>
+
+	<tr > 
+		<td >math</td>
+		<td >80</td>
+		
+		
+	</tr>
+<tr > 
+		<td >chemistry</td>
+		<td >20</td>
+		
+		
+	</tr>
+	<tr > 
+		<td >english</td>
+		<td >78</td>
+		
+		
+	</tr>
+
+</tbody>
+<tfoot bgcolor="yellow">
+	<tr > 
+		<td >total marks</td>
+		<td >178</td>
+		
+		
+	</tr>
+</tfoot>
+
+<iframe src="https://www.yahoobaba.net" frameborder="1" align="right" width="500px" height="500px">if we to show another website on a page aside then use it</iframe>
+<p>this is a website from where you can learn computer courses </p>
+
+<audio controls="" autoplay="" loop="" muted="">
+	<source src="audio/song.mp3" type="audio/mpeg">
+	<source src="audio/song.ogg" type="audio/mpeg">
+	<source src="audio/song.wav" type="audio/mpeg">
+</audio>
+
+<video controls autoplay width="320" height="400" poster="howandhow.jpg" >
+	<source src="song.mp4" >
+</video>
+<br>
+
+<form action="" method="">
+	<label>name</label>
+	<input type="text" name="enter name" placeholder="enter your good name"><br><br>
+
+	<label>password</label>
+	<input type="password" name=""><br><br>
+
+	<label>gender</label>
+	<input type="radio" name="gender"><label>male</label><input type="radio" name="gender"><label>female</label><br><br>
+
+	<label>hobbies</label>
+	<input type="checkbox" name=""><label>music</label><input type="checkbox" name=""><label>playing</label>
+	<input type="checkbox" name=""><label>working</label><br><br>
+
+	<label>message</label>
+	<textarea rows="10" cols="10" placeholder="write something "></textarea><br>
+
+	<label>country</label>
+	<select>
+		<option>pakistan</option>
+		<option selected>china</option>
+		<option>french</option>
+		<option>india</option>
+	</select><br>
+
+	<label>cars</label>
+	<select>
+	<optgroup label="toyota">
+		<option>large</option>
+		<option>samll</option>
+		<option>medium</option>
+	</optgroup>
+	<optgroup label="honda">
+		<option>large</option>
+		<option>samll</option>
+		<option>medium</option>
+	</optgroup>
+
+<optgroup label="fraree">
+		<option>large</option>
+		<option>samll</option>
+		<option>medium</option>
+	</optgroup>
+</select>
+
+<br>
+<label>cars</label>
+<input type="" name="" list="cars">
+<datalist id="cars">
+	<option value="innova"></option>
+	<option value="kwid"></option>
+    <option value="swift"></option>
+</datalist>
+<br>
+<label>upload file</label>
+<!_<input type="file" name="" accept="image/*">
+<input type="file" name="" accept="video/*">
+<input type="file" name="" accept="video/.mp4">
+_>
+<br>
+<input type="submit" name="" value="save"><br>
+<input type="reset" name="" ><br>
+<input type="button" name="" value="click"><br>
+<input type="image" name="" src="howandhow.jpg" width="110" height="115">
+
+
+</form>
+<form action="" method="">
+	<fieldset><!_use to make a border around form_>
+		<legend>personal information</legend>
+	<label>name</label>
+	<input type="text" name="enter name" placeholder="enter your good name"><br><br>
+
+	<label>password</label>
+	<input type="password" name=""><br><br>
+
+	<label>gender</label>
+	<input type="radio" name="gender"><label>male</label><input type="radio" name="gender"><label>female</label><br><br>
+
+</fieldset>
+</form>
+
+<!_html5 new tags_><br>
+
+<label>select color</label>
+<input type="color" name="">
+<br>
+<label>number</label>
+<input type="number" min="1" max="10" step="2" name="">
+<br>
+<label>range</label>
+<input type="range" min="1" max="10" step="2" name="">
+<br>
+
+<label>date</label>
+<input type="date"  name="">
+
+<br>
+<label>datetime</label>
+<input type="datetime-local"  name="">
+
+<br>
+<label>month</label>
+<input type="month"  name="">
+<br>
+<label>week</label>
+<input type="week"  name="">
+<br>
+<label>time</label>
+<input type="time"  name="">
+<br>
+<label>email</label>
+<input type="email"  name=""><br>
+<label>url</label>
+<input type="url"  name="">
+<br>
+<label>search</label>
+<input type="search"  name="">
+<br>
+<label>phone no</label>
+<input type="tel"  name="">
+<input type="submit" name="">
+
+
+
+</body>
+
+</html>
